--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: тест скрипта 1
+    - name: Тест создания файла
       run: |
         chmod +x task_test.sh
         ./task_test.sh
-    
+    - name: Тест удаления файла
+      run: |
+        chmod +x test_same.sh
+        ./test_same.sh
